[package]
name = "dist-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
    "src/broadcast_node",
    "src/g_counter_node",
    "src/node_common"
]

[features]
default = ["broadcast"]
broadcast = ["dep:broadcast_node"]
g-counter = ["dep:g_counter_node"]


[dependencies]
async-trait = "0.1.68"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
simple-error = "0.3.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-context = "0.1.3"
tokio-util = "0.7.7"
serde_derive = "1.0.192"
anyhow = "1.0.86"
broadcast_node = { path = "src/broadcast_node", optional = true }
g_counter_node = { path = "src/g_counter_node", optional = true }
serde_path_to_error = "0.1.16"
