[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
simple-error = "0.3.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-context = "0.1.3"
tokio-util = "0.7.7"
serde_derive = "1.0.192"
anyhow = "1.0.86"
ulid = "1.2.1"

